Incorrect color management for texture overlay #39430

Closed
opened 2014-03-26 13:40:26 +01:00 by Leon Cheung · 7 comments
Member

System Information
Win7 64bit | FX2700M

Blender Version
Broken: 2.70 Hash: b4d259f
Worked: n/a

Short description of error
When using node-composited texture for painting, overlay color seems incorrect.

Exact steps for others to reproduce the error
Please see attached example file. Thanks for checking.

node_texture.png

node_texture_overlay.blend

**System Information** Win7 64bit | FX2700M **Blender Version** Broken: 2.70 Hash: b4d259f Worked: n/a **Short description of error** When using node-composited texture for painting, overlay color seems incorrect. **Exact steps for others to reproduce the error** Please see attached example file. Thanks for checking. ![node_texture.png](https://archive.blender.org/developer/F82635/node_texture.png) [node_texture_overlay.blend](https://archive.blender.org/developer/F82634/node_texture_overlay.blend)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @ZhangYu

Added subscriber: @ZhangYu

Added subscriber: @Psy-Fi

Added subscriber: @Psy-Fi
Antonis Ryakiotakis self-assigned this 2014-03-26 23:27:10 +01:00

This issue was referenced by blender/blender-addons-contrib@301d7d2f63

This issue was referenced by blender/blender-addons-contrib@301d7d2f63f3e9e5560500c225f9ae437075418f

This issue was referenced by 301d7d2f63

This issue was referenced by 301d7d2f63f3e9e5560500c225f9ae437075418f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 301d7d2f63.

Closed by commit 301d7d2f63.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39430
No description provided.