Fix T39430, incorrect color management in paint cursor when using texture nodes.

Adopt a similar system to texture sampling for painting.